--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>People Are Protesting For Your Future!</h1>
+    <img src="download (13).jpeg" alt="Protesting">
     <p>We want to help people who are protesting so that they can help the future. If only five people are protesting no one will listen to them but the more people protesting means more people listening.</p>
 </body>
 </html>
