add another page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>People Are Protesting For Your Future!</h1>
     <p>We want to help people who are protesting so that they can help the future. If only five people are protesting no one will listen to them but the more people protesting means more people listening.</p>
-<img src="download (13).jpeg" alt="Protesting!" width="500">
+<a href="racismprotesting.html">Racism</a>
+
+    <img src="download (13).jpeg" alt="Protesting!" width="500">
 <img src="unnamed.png" alt="Poster" width="500">
 </body>
 </html>
